--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "mcp>=1.2.0",
     "anthropic>=0.42.0",
     "python-dotenv>=1.0.1",
+    "pydantic>=2.10.5",
 ]
 readme = "README.md"
 requires-python = ">= 3.10"
